--- a/plugin.yml
+++ b/plugin.yml
@@ -1,8 +1,8 @@
 name: SimpleBroadcast
 main: SimpleBroadcast\SimpleBroadcast
 author: Dutok
-version: 1.0
-api: 1.0.0
+version: 2.0
+api: [3.0.0, 4.0.0]
 commands:
  broadcast:
   permission: simplebroadcast.broadcast
